changed cover photo, fixed styling so it bleeds to edge

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,6 @@
   color: rgb(255,255,255)
 }
 
-.yellow {
-  color: rgb(243,234,170)
-}
 
 .grey {
   color:grey
@@ -55,13 +52,15 @@
   font-size: 2.3vw;
 }
 
+.large{
+  font-size: 2vw;
+}
+
 .small {
   font-size: 1vw;
 }
 
-.large{
-  font-size: 2vw;
-}
+
 
 .resume {
   font-family: 'Noto Sans KR', sans-serif;
@@ -111,11 +110,18 @@
 }
 
 .ferris {
-  size: cover;
+
+  width: 100%;
+  z-index: -1;
 }
 
 .demo-button {
   background-color: white;
+}
+
+html, body {
+    margin: 0;
+    height: 100%;
 }
 
 
